compiler/testData/javaModules/simpleUseNonExportedPackage/moduleB.txt
compiler/testData/javaModules/simpleUseNonExportedPackage/moduleB/usage.kt:8:9: error: symbol is declared in module 'moduleA' which does not export package 'a.impl'
val a3: AImpl = A.getInstance()
        ^^^^^
compiler/testData/javaModules/simpleUseNonExportedPackage/moduleB/usage.kt:9:18: error: symbol is declared in module 'moduleA' which does not export package 'a.impl'
val a4: String = AImpl.method()
                 ^^^^^
compiler/testData/javaModules/simpleUseNonExportedPackage/moduleB/usage.kt:9:24: error: symbol is declared in module 'moduleA' which does not export package 'a.impl'
val a4: String = AImpl.method()
                       ^^^^^^
compiler/testData/javaModules/simpleUseNonExportedPackage/moduleB/usage.kt:10:18: error: symbol is declared in module 'moduleA' which does not export package 'a.impl'
val a5: String = AImpl.field
                 ^^^^^
compiler/testData/javaModules/simpleUseNonExportedPackage/moduleB/usage.kt:10:24: error: symbol is declared in module 'moduleA' which does not export package 'a.impl'
val a5: String = AImpl.field
                       ^^^^^
COMPILATION_ERROR
